--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Widyah Kurniasaru # your name (or website title) here
+logo: "https://user-images.githubusercontent.com/104265063/178750789-18ba413f-1b4b-45e8-ab2f-375dc5abfd20.jpeg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Student at Diponegoro University
+  <br>
+   PZSIB Data Warehousing, Visualization, and Analysis for Business Insight
   <br><br>
-  Second description 
+ Semarang, Central Java
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
+  <a href="https://www.linkedin.com/in/widyah-kurniasari-b9103b229">View My LinkedIn Profile</a> 
+  <a href="https://www.instagram.com/widyah.kur/">View My Instagram Profile</a> 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
